--- a/Proposal/thesis_paper/document.bib
+++ b/Proposal/thesis_paper/document.bib
@@ -549,12 +549,12 @@ pages = {331-339}
 }
 
 @inproceedings{gabrilovich2004text,
-	title={Text categorization with many redundant features: Using aggressive feature selection to make SVMs competitive with {C}4. 5},
-	author={Gabrilovich, Evgeniy and Markovitch, Shaul},
-	booktitle={ICML},
-	pages={41},
-	year={2004},
-	organization={ACM}
+  title={Parameterized generation of labeled datasets for text categorization based on a hierarchical directory},
+  author={Davidov, Dmitry and Gabrilovich, Evgeniy and Markovitch, Shaul},
+  booktitle={Proceedings of the 27th annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={250--257},
+  year={2004},
+  organization={ACM}
 }
 
 @book{breiman1984classification,
