--- a/Proposal/thesis_paper/document.bib
+++ b/Proposal/thesis_paper/document.bib
@@ -548,6 +548,15 @@ pages = {331-339}
 	organization={ACM}
 }
 
+@inproceedings{gabrilovich2004textresults,
+  title={Text categorization with many redundant features: using aggressive feature selection to make SVMs competitive with C4. 5},
+  author={Gabrilovich, Evgeniy and Markovitch, Shaul},
+  booktitle={Proceedings of the twenty-first international conference on Machine learning},
+  pages={41},
+  year={2004},
+  organization={ACM}
+}
+
 @inproceedings{gabrilovich2004text,
   title={Parameterized generation of labeled datasets for text categorization based on a hierarchical directory},
   author={Davidov, Dmitry and Gabrilovich, Evgeniy and Markovitch, Shaul},
