--- a/Proposal/thesis_paper/document.bib
+++ b/Proposal/thesis_paper/document.bib
@@ -680,3 +680,14 @@ pages = {331-339}
 	year={2013},
 	publisher={Springer}
 }
+
+@article{dejong1986explanation,
+  title={Explanation-based learning: An alternative view},
+  author={DeJong, Gerald and Mooney, Raymond},
+  journal={Machine learning},
+  volume={1},
+  number={2},
+  pages={145--176},
+  year={1986},
+  publisher={Springer}
+}
